# ockam

./: .gitignore  .gitmodules  docker-compose.yml
.github/workflows/: containerful.yml
implementations/c/: CMakeLists.txt  build.gradle  ockam-config.cmake  ockam_local_options.cmake
implementations/c/cmake/: external_cc_library.cmake  ockam_cc_alwayslink.cmake  ockam_cc_binary.cmake  ockam_cc_library.cmake  ockam_cc_test.cmake  ockam_cmocka.cmake  ockam_copts.cmake  ockam_macros.cmake
implementations/c/lib/: CMakeLists.txt
implementations/c/lib/log/: CMakeLists.txt  ockam_local_options.cmake
implementations/c/lib/transport/: CMakeLists.txt  build.gradle  clean  ockam_local_options.cmake  settings.gradle  transport.c
implementations/c/test/: CMakeLists.txt
implementations/c/test/transport/: CMakeLists.txt  ockam_local_options.cmake
implementations/c/test/transport/server/: CMakeLists.txt
implementations/elixir/: build.gradle  mix.exs
implementations/elixir/lib/: transport.ex  vault.ex
implementations/elixir/lib/transport/: handshake.ex  udp.ex
implementations/elixir/lib/transport/tcp/: connection.ex  listener.ex
implementations/elixir/lib/vault/: nif.ex
implementations/elixir/test/: ockam_test.exs
implementations/elixir/test/transport/: handshake_test.exs
implementations/elixir/test/vault/: hkdf_test.exs
implementations/rust/crates/ockam-vault-sys/: Cargo.toml  build.rs
implementations/rust/crates/ockam-vault-sys/c_src/: vault.h  vault_config.h
implementations/rust/crates/ockam-vault-sys/src/: lib.rs
implementations/rust/crates/ockam/src/: lib.rs  rand.rs  vault.rs
